# ROBOTIS-THORMANG-msgs

./: LICENSE  README.md
thormang3_action_module_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_alarm_module_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_alarm_module_msgs/msg/: JointOverload.msg  JointOverloadStatus.msg
thormang3_feet_ft_module_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_feet_ft_module_msgs/msg/: BothWrench.msg
thormang3_gripper_module_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_head_control_module_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_head_control_module_msgs/msg/: HeadJointPose.msg
thormang3_manipulation_module_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_manipulation_module_msgs/msg/: ControlKinematicsPose.msg  JointGroupPose.msg  KinematicsPose.msg
thormang3_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_offset_tuner_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_tuning_module_msgs/: CMakeLists.txt  package.xml
thormang3_tuning_module_msgs/msg/: JointOffsetData.msg  JointOffsetPositionData.msg  JointsOffsetPositionData.msg
thormang3_walking_module_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_walking_module_msgs/msg/: BalanceParam.msg  DampingBalanceParam.msg  JointFeedBackGain.msg  PoseZRPY.msg  RobotPose.msg  StepData.msg  StepPositionData.msg  StepTimeData.msg  WalkingJointStatesStamped.msg
thormang3_walking_module_msgs/srv/: AddStepDataArray.srv  GetReferenceStepData.srv  RemoveExistingStepData.srv  SetBalanceParam.srv  SetDampingBalanceParam.srv  SetJointFeedBackGain.srv  StartWalking.srv
thormang3_wholebody_module_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_wholebody_module_msgs/msg/: BimanualGroupPose.msg  BimanualGroupPose.msg~  CirclePose.msg  DemoPose.msg  JointGroupPose.msg  JointGroupPose.msg~  JointPose.msg  KinematicsGroupPose.msg  KinematicsGroupPose.msg~  KinematicsPose.msg  WheelPose.msg
thormang3_wholebody_module_msgs/srv/: GetJointPose.srv
