<?xml version="1.0"?>
<package>
  <name>thormang3_msgs</name>
  <version>0.2.2</version>
  <description>ROS packages for the thormang3_msgs (meta package)</description>
  <license>BSD</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="hjsong@robotis.com">Jay Song</author>
  <author email="sch@robotis.com">SCH</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-msgs/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-msgs</url>
  <url type="website">http://wiki.ros.org/thormang3_msgs</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>thormang3_action_module_msgs</run_depend>
  <run_depend>thormang3_feet_ft_module_msgs</run_depend>
  <run_depend>thormang3_head_control_module_msgs</run_depend>
  <run_depend>thormang3_manipulation_module_msgs</run_depend>
  <run_depend>thormang3_offset_tuner_msgs</run_depend>
  <run_depend>thormang3_walking_module_msgs</run_depend>
  <export><metapackage/></export>
</package>
