<?xml version="1.0"?>
<package format="2">
  <name>thormang3_msgs</name>
  <version>0.3.0</version>
  <description>
    ROS packages for the thormang3_msgs (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="sch@robotis.com">SCH</author>
  <author>Jay Song</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_msgs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-msgs/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>thormang3_action_module_msgs</exec_depend>
  <exec_depend>thormang3_feet_ft_module_msgs</exec_depend>
  <exec_depend>thormang3_head_control_module_msgs</exec_depend>
  <exec_depend>thormang3_manipulation_module_msgs</exec_depend>
  <exec_depend>thormang3_offset_tuner_msgs</exec_depend>
  <exec_depend>thormang3_walking_module_msgs</exec_depend>
  <export><metapackage/></export>
</package>
